Reposotory Refactor